tests/baselines/reference/sourceMapValidationClasses.errors.txt
sourceMapValidationClasses.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
sourceMapValidationClasses.ts(1,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== sourceMapValidationClasses.ts (2 errors) ====
    module Foo.Bar {
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
               ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        "use strict";
    
        class Greeter {
            constructor(public greeting: string) {
            }
    
            greet() {
                return "<h1>" + this.greeting + "</h1>";
            }
        }
    
    
        function foo(greeting: string): Greeter {
            return new Greeter(greeting);
        }
    
        var greeter = new Greeter("Hello, world!");
        var str = greeter.greet();
    
        function foo2(greeting: string, ...restGreetings /* more greeting */: string[]) {
            var greeters: Greeter[] = []; /* inline block comment */
            greeters[0] = new Greeter(greeting);
            for (var i = 0; i < restGreetings.length; i++) {
                greeters.push(new Greeter(restGreetings[i]));
            }
    
            return greeters;
        }
    
        var b = foo2("Hello", "World", "!");
        // This is simple signle line comment
        for (var j = 0; j < b.length; j++) {
            b[j].greet();
        }
    }